Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -70,7 +70,122 @@
   </header>
   <main class="container">
     <h1 class="visually-hidden">Интернет-магазин «Техномарт»</h1>
-    <!-- Здесь будут блоки, выделенные красным -->
+    <section class="main-promo">
+      <h2 class="visually-hidden">Спецпредложения</h2>
+      <div class="promo-block promo-materials promo-new">
+        <h3>Материалы</h3>
+        <a href="#">На любой вкус</a>
+      </div>
+      <div class="promo-block promo-tools"></div>
+        <h3>Инструмент</h3>
+        <a href="#">На все случаи</a>
+      <div class="promo-block promo-tech"></div>
+        <h3>Техника</h3>
+        <a href="#">Для стройки</a>
+      <div class="promo-block promo-sale"></div>
+        <h3>Скидки 50%</h3>
+        <a href="#">На 350 товаров</a>
+      <div class="promo-block promo-shipping">
+        <h3>Доставка</h3>
+        <a href="#">Бесплатно</a>
+      </div>
+      <!-- Здесь будет слайдер -->
+    </section>
+    <section class="main-products">
+      <h2>Популярные товары:</h2>
+      <a href="#">Все популярные товары</a>
+      <ul class="main-products-list">
+        <li class="catalog-item">
+          <div class="catalog-item-buttons">
+             <button class="catalog-item-button catalog-item-order">Купить</button>
+             <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+          </div>
+          <div class="catalog-image-container">
+           <a href="catalog-item.html">
+             <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+           </a>
+          </div>
+          <a href="catalog-item.html">
+           <h3>Перфоратор BOSCH BFG 9000</h3>
+          </a>
+          <span class="old-price">32500 Р.</span>
+          <span class="new-price">25500 Р.</span>
+        </li>
+        <li class="catalog-item">
+          <div class="catalog-item-buttons">
+             <button class="catalog-item-button catalog-item-order">Купить</button>
+             <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+          </div>
+          <div class="catalog-image-container">
+           <a href="catalog-item.html">
+             <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+           </a>
+          </div>
+          <a href="catalog-item.html">
+           <h3>Перфоратор BOSCH BFG 3000</h3>
+          </a>
+          <span class="old-price">22500 Р.</span>
+          <span class="new-price">15500 Р.</span>
+        </li>
+        <li class="catalog-item">
+          <div class="catalog-item-buttons">
+             <button class="catalog-item-button catalog-item-order">Купить</button>
+             <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+          </div>
+          <div class="catalog-image-container">
+           <a href="catalog-item.html">
+             <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+           </a>
+          </div>
+          <a href="catalog-item.html">
+           <h3>Перфоратор BOSCH BFG 6000</h3>
+          </a>
+          <span class="old-price">30500 Р.</span>
+          <span class="new-price">25500 Р.</span>
+        </li>
+        <li class="catalog-item catalog-item-new">
+          <div class="catalog-item-buttons">
+             <button class="catalog-item-button catalog-item-order">Купить</button>
+             <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+          </div>
+          <div class="catalog-image-container">
+           <a href="catalog-item.html">
+             <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+           </a>
+          </div>
+          <a href="catalog-item.html">
+           <h3>Перфоратор BOSCH BFG 2000</h3>
+          </a>
+          <span class="new-price">12500 Р.</span>
+        </li>
+      </ul>
+    </section>
+    <section class="main-brands">    
+      <h2>Популярные производители:</h2>
+      <a href="#">Все производители</a>
+      <ul class="main-brands-list">
+        <li><a href="#"><img src="#"></a></li>
+        <li><a href="#"><img src="#"></a></li>
+        <li><a href="#"><img src="#"></a></li>
+        <li><a href="#"><img src="#"></a></li>
+        <li><a href="#"><img src="#"></a></li>
+        <li><a href="#"><img src="#"></a></li>
+        <li><a href="#"><img src="#"></a></li>
+        <li><a href="#"><img src="#"></a></li>
+      </ul>
+    </section>
+    <section class="main-services">
+      <h2>Сервисы</h2>
+      <p>Хороший интернет-магазин отличается от плохого не только ценами!
+      <br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+      <ul class="services-list">
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Кредит</a></li>
+      </ul>
+      <h3>Доставка</h3>
+      <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+    </section>
     <div class="index-columns">
       <section class="main-about">
         <h2>Компания «Техномарт»</h2>
