--- a/index.html
+++ b/index.html
@@ -68,146 +68,171 @@
         </ul>
       </nav>
   </header>
-  <main class="container">
-    <h1 class="visually-hidden">Интернет-магазин «Техномарт»</h1>
-    <section class="main-promo">
-      <h2 class="visually-hidden">Спецпредложения</h2>
-      <div class="promo-block promo-materials promo-new">
-        <h3>Материалы</h3>
-        <a href="#">На любой вкус</a>
-      </div>
-      <div class="promo-block promo-tools"></div>
-        <h3>Инструмент</h3>
-        <a href="#">На все случаи</a>
-      <div class="promo-block promo-tech"></div>
-        <h3>Техника</h3>
-        <a href="#">Для стройки</a>
-      <div class="promo-block promo-sale"></div>
-        <h3>Скидки 50%</h3>
-        <a href="#">На 350 товаров</a>
-      <div class="promo-block promo-shipping">
-        <h3>Доставка</h3>
-        <a href="#">Бесплатно</a>
-      </div>
-      <!-- Здесь будет слайдер -->
-    </section>
-    <section class="main-products">
-      <h2>Популярные товары:</h2>
-      <a href="#">Все популярные товары</a>
-      <ul class="main-products-list">
-        <li class="catalog-item">
-          <div class="catalog-item-buttons">
-             <button class="catalog-item-button catalog-item-order">Купить</button>
-             <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+  <main class="main-content">
+  <div class="container">
+      <h1 class="visually-hidden">Интернет-магазин «Техномарт»</h1>
+      <section class="main-promo">
+        <h2 class="visually-hidden">Спецпредложения</h2>
+        <div class="promo-block promo-materials promo-new">
+          <h3>Материалы</h3>
+          <a href="#">На любой вкус</a>
+        </div>
+        <div class="promo-block promo-tools">
+          <h3>Инструмент</h3>
+          <a href="#">На все случаи</a>
+        </div>
+        <div class="promo-block promo-tech">
+          <h3>Техника</h3>
+          <a href="#">Для стройки</a>
+        </div>
+        <div class="promo-slider">
+          <h3>Дрели</h3>
+          <p>Соседям на радость!</p>
+          <a href="#" class="button slider-button">Открыть каталог</a>
+        </div>
+        <div class="promo-right-column">
+          <div class="promo-block promo-sale">
+            <h3>Скидки 50%</h3>
+            <a href="#">На 350 товаров</a>
           </div>
-          <div class="catalog-image-container">
-           <a href="catalog-item.html">
-             <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-           </a>
+          <div class="promo-block promo-shipping">
+            <h3>Доставка</h3>
+            <a href="#">Бесплатно</a>
           </div>
-          <a href="catalog-item.html">
-           <h3>Перфоратор BOSCH BFG 9000</h3>
-          </a>
-          <span class="old-price">32500 Р.</span>
-          <span class="new-price">25500 Р.</span>
-        </li>
-        <li class="catalog-item">
-          <div class="catalog-item-buttons">
-             <button class="catalog-item-button catalog-item-order">Купить</button>
-             <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
-          </div>
-          <div class="catalog-image-container">
-           <a href="catalog-item.html">
-             <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-           </a>
-          </div>
-          <a href="catalog-item.html">
-           <h3>Перфоратор BOSCH BFG 3000</h3>
-          </a>
-          <span class="old-price">22500 Р.</span>
-          <span class="new-price">15500 Р.</span>
-        </li>
-        <li class="catalog-item">
-          <div class="catalog-item-buttons">
-             <button class="catalog-item-button catalog-item-order">Купить</button>
-             <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
-          </div>
-          <div class="catalog-image-container">
-           <a href="catalog-item.html">
-             <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-           </a>
-          </div>
-          <a href="catalog-item.html">
-           <h3>Перфоратор BOSCH BFG 6000</h3>
-          </a>
-          <span class="old-price">30500 Р.</span>
-          <span class="new-price">25500 Р.</span>
-        </li>
-        <li class="catalog-item catalog-item-new">
-          <div class="catalog-item-buttons">
-             <button class="catalog-item-button catalog-item-order">Купить</button>
-             <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
-          </div>
-          <div class="catalog-image-container">
-           <a href="catalog-item.html">
-             <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
-           </a>
-          </div>
-          <a href="catalog-item.html">
-           <h3>Перфоратор BOSCH BFG 2000</h3>
-          </a>
-          <span class="new-price">12500 Р.</span>
-        </li>
-      </ul>
-    </section>
-    <section class="main-brands">    
-      <h2>Популярные производители:</h2>
-      <a href="#">Все производители</a>
-      <ul class="main-brands-list">
-        <li><a href="#"><img src="#"></a></li>
-        <li><a href="#"><img src="#"></a></li>
-        <li><a href="#"><img src="#"></a></li>
-        <li><a href="#"><img src="#"></a></li>
-        <li><a href="#"><img src="#"></a></li>
-        <li><a href="#"><img src="#"></a></li>
-        <li><a href="#"><img src="#"></a></li>
-        <li><a href="#"><img src="#"></a></li>
-      </ul>
-    </section>
-    <section class="main-services">
-      <h2>Сервисы</h2>
-      <p>Хороший интернет-магазин отличается от плохого не только ценами!
-      <br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-      <ul class="services-list">
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Гарантия</a></li>
-        <li><a href="#">Кредит</a></li>
-      </ul>
-      <h3>Доставка</h3>
-      <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-    </section>
-    <div class="index-columns">
-      <section class="main-about">
-        <h2>Компания «Техномарт»</h2>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          Техномарт работает со многими транспортными компаниями:
-        </p>
-        <ul class="companies-list">
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
+        </div>
+      </section>
+      <section class="main-products">
+        <div class="main-heading">
+          <h2>Популярные товары:</h2>
+          <a href="#" class="button">Все популярные товары</a>
+        </div>
+        <ul class="main-products-list">
+          <li class="catalog-item">
+            <div class="catalog-item-buttons">
+               <button class="catalog-item-button catalog-item-order">Купить</button>
+               <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
+            <div class="catalog-image-container">
+             <a href="catalog-item.html">
+               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+             </a>
+            </div>
+            <a href="catalog-item.html">
+             <h3>Перфоратор BOSCH BFG 9000</h3>
+            </a>
+            <span class="old-price">32500 Р.</span>
+            <span class="new-price">25500 Р.</span>
+          </li>
+          <li class="catalog-item">
+            <div class="catalog-item-buttons">
+               <button class="catalog-item-button catalog-item-order">Купить</button>
+               <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
+            <div class="catalog-image-container">
+             <a href="catalog-item.html">
+               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+             </a>
+            </div>
+            <a href="catalog-item.html">
+             <h3>Перфоратор BOSCH BFG 3000</h3>
+            </a>
+            <span class="old-price">22500 Р.</span>
+            <span class="new-price">15500 Р.</span>
+          </li>
+          <li class="catalog-item">
+            <div class="catalog-item-buttons">
+               <button class="catalog-item-button catalog-item-order">Купить</button>
+               <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
+            <div class="catalog-image-container">
+             <a href="catalog-item.html">
+               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+             </a>
+            </div>
+            <a href="catalog-item.html">
+             <h3>Перфоратор BOSCH BFG 6000</h3>
+            </a>
+            <span class="old-price">30500 Р.</span>
+            <span class="new-price">25500 Р.</span>
+          </li>
+          <li class="catalog-item catalog-item-new">
+            <div class="catalog-item-buttons">
+               <button class="catalog-item-button catalog-item-order">Купить</button>
+               <button class="catalog-item-button catalog-item-bookmark">В закладки</button>
+            </div>
+            <div class="catalog-image-container">
+             <a href="catalog-item.html">
+               <img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112">
+             </a>
+            </div>
+            <a href="catalog-item.html">
+             <h3>Перфоратор BOSCH BFG 2000</h3>
+            </a>
+            <span class="new-price">12500 Р.</span>
+          </li>
         </ul>
-        <a href="#" class="button-more">Подробнее о компании</a>
       </section>
-      <section class="main-contacts">
-        <h2>Контакты</h2>
-        <p>Вы можете забрать товар сами, <br>
-          заехав в наш офис:
-        </p>
-        <div class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></div>
-        <button class="button-contacts">Заблудились? Напишите нам!</button>
+      <section class="main-brands">    
+        <div class="main-heading">
+          <h2>Популярные производители:</h2>
+          <a href="#" class="button">Все производители</a>
+        </div>
+        <ul class="main-brands-list">
+          <li><a href="#"><img src="img/bosch.png" width="126" height="37" alt="Bosch"></a></li>
+          <li><a href="#"><img src="img/makita.png" width="123" height="40" alt="Makita"></a></li>
+          <li><a href="#"><img src="img/de-walt.png" width="146" height="44" alt="DeWalt"></a></li>
+          <li><a href="#"><img src="img/interskol.png" width="200" height="88" alt="Интерскол"></a></li>
+          <li><a href="#"><img src="img/hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
+          <li><a href="#"><img src="img/lg.png" width="121" height="73" alt="LG"></a></li>
+          <li><a href="#"><img src="img/aeg.png" width="151" height="96" alt="AEG"></a></li>
+          <li><a href="#"><img src="img/metabo.png" width="204" height="69" alt="Metabo"></a></li>
+        </ul>
       </section>
+    </div>
+    <section class="main-services">
+      <div class="container">
+        <div class="services-box">
+          <h2>Сервисы</h2>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!
+          <br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        </div>
+        <div class="services-slider">
+          <ul class="services-list">
+            <li class="services-item active"><a href="#">Доставка</a></li>
+            <li class="services-item"><a href="#">Гарантия</a></li>
+            <li class="services-item"><a href="#">Кредит</a></li>
+          </ul>
+            <div class="services-description">
+            <h3>Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+            </div>
+        </div>
+      </div>
+    </section>
+    <div class="container">
+      <div class="index-columns">
+        <section class="main-about">
+          <h2>Компания «Техномарт»</h2>
+          <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+            Техномарт работает со многими транспортными компаниями:
+          </p>
+          <ul class="companies-list">
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a href="#" class="button-more">Подробнее о компании</a>
+        </section>
+        <section class="main-contacts">
+          <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, <br>
+            заехав в наш офис:
+          </p>
+          <div class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></div>
+          <button class="button-contacts">Заблудились? Напишите нам!</button>
+        </section>
+      </div>
     </div>
   </main>
   <footer class="footer-main">
