Сверстала все, кроме 2 слайдеров и чекбоксов в фильтре

--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,7 @@
       <ul>
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Компания</a></li>
-        <li><a href="#">Каталог</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
         <li><a href="#">Новости</a></li>
         <li><a href="#">Спецпредложения</a></li>
         <li><a href="#">Доставка</a></li>
@@ -348,22 +348,13 @@
         <div class="footer-social">
           <ul>
             <li>
-              <a class="social-button" href="#">
-                  <span class="visually-hidden">Вконтакте</span>
-                  <img src="img/icon-vk.svg" height="15" width="26" alt="Страница «Техномарта» ВКонтакте">
-                </a>
+              <a class="social-button social-button-vk" href="#" aria-label="Страница «Техномарта» ВКонтакте"></a>
             </li>
             <li>
-              <a class="social-button" href="#">
-                  <span class="visually-hidden">Фейсбук</span>
-                  <img src="img/icon-fb.svg" height="22" width="12" alt="Страница «Техномарта» на Фейсбуке">
-                </a>
+              <a class="social-button social-button-fb" href="#" aria-label="Страница «Техномарта» на Фейсбуке"></a>
             </li>
             <li>
-              <a class="social-button" href="#">
-                  <span class="visually-hidden">Инстаграм</span>
-                  <img src="img/icon-insta.svg" height="21" width="21" alt="Страница «Техномарта» в Инстаграме">
-                </a>
+              <a class="social-button social-button-insta" href="#" aria-label="Страница «Техномарта» в Инстаграме"></a>
             </li>
           </ul>
         </div>
@@ -388,9 +379,7 @@
       <a href="cart.html" class="button-order">Оформить заказ</a>
       <button type="button" class="button-dismiss">Продолжить покупки</button>
     </div>
-    <button class="modal-close" type="button">
-      <span class="visually-hidden">Закрыть</span>
-    </button>
+    <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
 </body>
 
