--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="header-top">
       <div class="container">
         <div class="header-logo">
-          <img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18">
+          <a>
+            <img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18">
+          </a>
         </div>
           <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
             <label for="search-field" class="visually-hidden">Поиск</label>
@@ -58,9 +60,9 @@
       </div>
       <nav class="main-menu container">
         <ul>
-          <li><a href="/">Главная</a></li>
+          <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="#">Спецпредложения</a></li>
           <li><a href="#">Доставка</a></li>
@@ -203,8 +205,19 @@
             <li class="services-item"><a href="#">Кредит</a></li>
           </ul>
             <div class="services-description">
-            <h3>Доставка</h3>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+              <div class="services-description-item services-shipping">
+              <h3>Доставка</h3>
+              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+              </div>
+              <div class="services-description-item services-warranty">
+              <h3>Гарантия</h3>
+              <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами</p>
+              </div>
+              <div class="services-description-item services-credit">
+              <h3>Кредит</h3>
+              <p>Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+              <a href="#" class="button">Отправить заявку</a>
+              </div>
             </div>
         </div>
       </div>
@@ -222,7 +235,7 @@
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
           </ul>
-          <a href="#" class="button-more">Подробнее о компании</a>
+          <a href="#" class="button button-more">Подробнее о компании</a>
         </section>
         <section class="main-contacts">
           <h2>Контакты</h2>
@@ -230,7 +243,7 @@
             заехав в наш офис:
           </p>
           <div class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></div>
-          <button class="button-contacts">Заблудились? Напишите нам!</button>
+          <button class="button button-contacts">Заблудились? Напишите нам!</button>
         </section>
       </div>
     </div>
@@ -266,22 +279,13 @@
           <div class="footer-social">
             <ul>
               <li>
-                <a class="social-button" href="#">
-                  <span class="visually-hidden">Вконтакте</span>
-                  <img src="img/icon-vk.svg" height="15" width="26" alt="Страница «Техномарта» ВКонтакте">
-                </a>
+                <a class="social-button social-button-vk" href="#" aria-label="Страница «Техномарта» ВКонтакте"></a>
               </li>
               <li>
-                <a class="social-button" href="#">
-                  <span class="visually-hidden">Фейсбук</span>
-                  <img src="img/icon-fb.svg" height="22" width="12" alt="Страница «Техномарта» на Фейсбуке">
-                </a>
+                <a class="social-button social-button-fb" href="#" aria-label="Страница «Техномарта» на Фейсбуке"></a>
               </li>
               <li>
-                <a class="social-button" href="#">
-                  <span class="visually-hidden">Инстаграм</span>
-                  <img src="img/icon-insta.svg" height="21" width="21" alt="Страница «Техномарта» в Инстаграме">
-                </a>
+                <a class="social-button social-button-insta" href="#" aria-label="Страница «Техномарта» в Инстаграме"></a>
               </li>
             </ul>
           </div>
@@ -302,9 +306,7 @@
          Как до нас добраться
          </h2>
     <img src="img/map-large.jpg" width="940" height="446" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" class="modal-map-img">
-    <button class="modal-close" type="button">
-      <span class="visually-hidden">Закрыть</span>
-    </button>
+    <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
   <section class="modal modal-feedback">
     <h2 class="visually-hidden">Обратная связь</h2>
@@ -321,12 +323,10 @@
         </label>
       </div>
       <div class="modal-button-container">
-        <button type="submit" class="button-submit">Отправить</button>
+        <button type="submit" class="button button-submit">Отправить</button>
       </div>
     </form>
-    <button class="modal-close" type="button">
-      <span class="visually-hidden">Закрыть</span>
-    </button>
+    <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
 </body>
 
